--- a/NomiNom/Info.plist
+++ b/NomiNom/Info.plist
@@ -4,5 +4,42 @@
 <dict>
 	<key>NSUserTrackingUsageDescription</key>
 	<string>This identifier will be used to deliver personalized ads to you.</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<!-- Google Sign In -->
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.YOUR-GOOGLE-CLIENT-ID</string>
+			</array>
+		</dict>
+		<!-- Facebook Sign In -->
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fbYOUR-FACEBOOK-APP-ID</string>
+			</array>
+		</dict>
+		<!-- WeChat Sign In -->
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>wxYOUR-WECHAT-APP-ID</string>
+			</array>
+		</dict>
+	</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>weixin</string>
+		<string>weixinULAPI</string>
+	</array>
+	<key>FacebookAppID</key>
+	<string>YOUR-FACEBOOK-APP-ID</string>
+	<key>FacebookClientToken</key>
+	<string>YOUR-FACEBOOK-CLIENT-TOKEN</string>
+	<key>FacebookDisplayName</key>
+	<string>NomiNom</string>
+	<key>GoogleClientID</key>
+	<string>YOUR-GOOGLE-CLIENT-ID</string>
 </dict>
 </plist>
